unpackaged/main/default/objects/Supplier__c/fields/AccountDomain__c.field-meta.xml
<CustomField>
    <fullName>AccountDomain__c</fullName>
    <label>Account Domain</label>
    <type>TextArea</type>
</CustomField>