unpackaged/main/default/objects/Supplier__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>