unpackaged/main/default/objects/Supplier__c/fields/ActiveJobs__c.field-meta.xml
<CustomField>
    <fullName>ActiveJobs__c</fullName>
    <label>Active Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>