unpackaged/main/default/objects/Supplier__c/fields/ActivityStatus__c.field-meta.xml
<CustomField>
    <fullName>ActivityStatus__c</fullName>
    <formula>if (
  (LastReadJobDate__c &gt;= today() - 30 &amp;&amp; LastJobAcceptedDate__c &lt; today() - 30), 'Lurker',
    if (
      ((LastReadJobDate__c &lt; today() - 30 || ISNULL(LastReadJobDate__c)) &amp;&amp; LastJobAcceptedDate__c &lt; today() - 30), 'Dormant',
      if (
        (
          (ISPICKVAL(SupplierStatus__c, 'approved') || ISPICKVAL(SupplierStatus__c, 'pip')) &amp;&amp; 
          (LastReadJobDate__c &gt;= today() - 30 &amp;&amp; LastJobAcceptedDate__c &gt;= today() - 30)
        ), 'Active', null
      )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Status</label>
    <type>Text</type>
</CustomField>