unpackaged/main/default/objects/Supplier__c/fields/AdditionalInsured__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInsured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Insured?</label>
    <type>Checkbox</type>
</CustomField>