unpackaged/main/default/objects/Supplier__c/fields/AddressLink__c.field-meta.xml
<CustomField>
    <fullName>AddressLink__c</fullName>
    <label>Address Link</label>
    <type>Url</type>
</CustomField>