unpackaged/main/default/objects/Supplier__c/fields/AddToCoachingList__c.field-meta.xml
<CustomField>
    <fullName>AddToCoachingList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Coaching List?</label>
    <type>Checkbox</type>
</CustomField>