unpackaged/main/default/objects/Supplier__c/fields/AdvanceCard2D__c.field-meta.xml
<CustomField>
    <fullName>AdvanceCard2D__c</fullName>
    <label>Advance Card / 2D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>