unpackaged/main/default/objects/Supplier__c/fields/AdvanceCardActivationDate__c.field-meta.xml
<CustomField>
    <fullName>AdvanceCardActivationDate__c</fullName>
    <label>Advance Card Activation Date</label>
    <type>Date</type>
</CustomField>