unpackaged/main/default/objects/Supplier__c/fields/AlexNotes__c.field-meta.xml
<CustomField>
    <fullName>AlexNotes__c</fullName>
    <description>Old field containing notes on the supplier</description>
    <label>Alex's Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>