unpackaged/main/default/objects/Supplier__c/fields/AlexRachelTomCallNotes__c.field-meta.xml
<CustomField>
    <fullName>AlexRachelTomCallNotes__c</fullName>
    <label>Alex / Rachel / Tom Call Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>