unpackaged/main/default/objects/Supplier__c/fields/AllEscalationsRequests__c.field-meta.xml
<CustomField>
    <fullName>AllEscalationsRequests__c</fullName>
    <label>All Escalations &amp; Requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>