unpackaged/main/default/objects/Supplier__c/fields/AS9100Certified__c.field-meta.xml
<CustomField>
    <fullName>AS9100Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AS9100 Certified?</label>
    <type>Checkbox</type>
</CustomField>