unpackaged/main/default/objects/Supplier__c/fields/AS9100ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>AS9100ExpirationDate__c</fullName>
    <label>AS9100 Expiration Date</label>
    <type>Date</type>
</CustomField>