unpackaged/main/default/objects/Supplier__c/fields/AssemblyFitCheck__c.field-meta.xml
<CustomField>
    <fullName>AssemblyFitCheck__c</fullName>
    <description>This might need to be a checkbox</description>
    <label>Assembly Fit Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>