unpackaged/main/default/objects/Supplier__c/fields/BinderJetCount__c.field-meta.xml
<CustomField>
    <fullName>BinderJetCount__c</fullName>
    <label>Binder Jet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>