unpackaged/main/default/objects/Supplier__c/fields/BusinessDesignation__c.field-meta.xml
<CustomField>
    <fullName>BusinessDesignation__c</fullName>
    <label>Business Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>