unpackaged/main/default/objects/Supplier__c/fields/CanMakePrintFromCAD__c.field-meta.xml
<CustomField>
    <fullName>CanMakePrintFromCAD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Previously shop_info_can_make_print_from_cad</description>
    <label>Can Make Print From CAD</label>
    <type>Checkbox</type>
</CustomField>