unpackaged/main/default/objects/Supplier__c/fields/CanViewJobs__c.field-meta.xml
<CustomField>
    <fullName>CanViewJobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a Supplier is able to view jobs on the Job Board</description>
    <label>Can View Jobs?</label>
    <type>Checkbox</type>
</CustomField>