unpackaged/main/default/objects/Supplier__c/fields/CarbonDLSApproved__c.field-meta.xml
<CustomField>
    <fullName>CarbonDLSApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carbon DLS Approved?</label>
    <type>Checkbox</type>
</CustomField>