unpackaged/main/default/objects/Supplier__c/fields/CarbonDLSCount__c.field-meta.xml
<CustomField>
    <fullName>CarbonDLSCount__c</fullName>
    <label>Carbon DLS Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>