unpackaged/main/default/objects/Supplier__c/fields/ChinaGroup__c.field-meta.xml
<CustomField>
    <fullName>ChinaGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China Group?</label>
    <type>Checkbox</type>
</CustomField>