unpackaged/main/default/objects/Supplier__c/fields/ClaimsAS9100__c.field-meta.xml
<CustomField>
    <fullName>ClaimsAS9100__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Certification claimed when requesting test part</description>
    <label>Claims AS9100</label>
    <type>Checkbox</type>
</CustomField>