unpackaged/main/default/objects/Supplier__c/fields/ClaimsISO13485__c.field-meta.xml
<CustomField>
    <fullName>ClaimsISO13485__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Certification claimed when requesting test part</description>
    <label>Claims ISO 13485</label>
    <type>Checkbox</type>
</CustomField>