unpackaged/main/default/objects/Supplier__c/fields/ClaimsISO9001__c.field-meta.xml
<CustomField>
    <fullName>ClaimsISO9001__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Certification claimed when requesting test part</description>
    <label>Claims ISO 9001</label>
    <type>Checkbox</type>
</CustomField>