unpackaged/main/default/objects/Supplier__c/fields/ClaimsITAR__c.field-meta.xml
<CustomField>
    <fullName>ClaimsITAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Certification claimed when requesting test part</description>
    <label>Claims ITAR</label>
    <type>Checkbox</type>
</CustomField>