unpackaged/main/default/objects/Supplier__c/fields/CMMPartner__c.field-meta.xml
<CustomField>
    <fullName>CMMPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMM Partner?</label>
    <type>Checkbox</type>
</CustomField>