unpackaged/main/default/objects/Supplier__c/fields/CNCApproved__c.field-meta.xml
<CustomField>
    <fullName>CNCApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CNC Approved?</label>
    <type>Checkbox</type>
</CustomField>