unpackaged/main/default/objects/Supplier__c/fields/CNCHorizontalCount__c.field-meta.xml
<CustomField>
    <fullName>CNCHorizontalCount__c</fullName>
    <label>CNC Horizontal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>