unpackaged/main/default/objects/Supplier__c/fields/CNCLatheCount__c.field-meta.xml
<CustomField>
    <fullName>CNCLatheCount__c</fullName>
    <label>CNC Lathe Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>