unpackaged/main/default/objects/Supplier__c/fields/CNCVerticalCount__c.field-meta.xml
<CustomField>
    <fullName>CNCVerticalCount__c</fullName>
    <label>CNC Vertical Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>