unpackaged/main/default/objects/Supplier__c/fields/CoachingLog__c.field-meta.xml
<CustomField>
    <fullName>CoachingLog__c</fullName>
    <description>Coaching Log</description>
    <inlineHelpText>Input Coaching Details Here.</inlineHelpText>
    <label>Coaching Log</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>