unpackaged/main/default/objects/Supplier__c/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <label>COI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>