unpackaged/main/default/objects/Supplier__c/fields/COIExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>COIExpirationDate__c</fullName>
    <label>COI Expiration Date</label>
    <type>Date</type>
</CustomField>