unpackaged/main/default/objects/Supplier__c/fields/CommunicationRating__c.field-meta.xml
<CustomField>
    <fullName>CommunicationRating__c</fullName>
    <label>Communication Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>