unpackaged/main/default/objects/Supplier__c/fields/CompletedJobs__c.field-meta.xml
<CustomField>
    <fullName>CompletedJobs__c</fullName>
    <label>Completed Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>