unpackaged/main/default/objects/Supplier__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Suppliers</relationshipLabel>
    <relationshipName>Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>