unpackaged/main/default/objects/Supplier__c/fields/CountCasting__c.field-meta.xml
<CustomField>
    <fullName>CountCasting__c</fullName>
    <label>Count Casting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>