unpackaged/main/default/objects/Supplier__c/fields/CountCNCAll__c.field-meta.xml
<CustomField>
    <fullName>CountCNCAll__c</fullName>
    <label>Count CNC All</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>