unpackaged/main/default/objects/Supplier__c/fields/DateApproved__c.field-meta.xml
<CustomField>
    <fullName>DateApproved__c</fullName>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>