unpackaged/main/default/objects/Supplier__c/fields/DemotionSponsorWhy__c.field-meta.xml
<CustomField>
    <fullName>DemotionSponsorWhy__c</fullName>
    <label>Demotion Sponsor &amp; Why</label>
    <length>255</length>
    <type>Text</type>
</CustomField>