unpackaged/main/default/objects/Supplier__c/fields/DieCastingApproved__c.field-meta.xml
<CustomField>
    <fullName>DieCastingApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Die Casting Approved?</label>
    <type>Checkbox</type>
</CustomField>