unpackaged/main/default/objects/Supplier__c/fields/DirectShip__c.field-meta.xml
<CustomField>
    <fullName>DirectShip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Ship?</label>
    <type>Checkbox</type>
</CustomField>