unpackaged/main/default/objects/Supplier__c/fields/DirectShipDemotionRequestWho__c.field-meta.xml
<CustomField>
    <fullName>DirectShipDemotionRequestWho__c</fullName>
    <label>Direct Ship Demotion Request &amp; Who:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>