unpackaged/main/default/objects/Supplier__c/fields/DirectShipPromotionDate__c.field-meta.xml
<CustomField>
    <fullName>DirectShipPromotionDate__c</fullName>
    <label>Direct Ship Promotion Date</label>
    <type>Date</type>
</CustomField>