unpackaged/main/default/objects/Supplier__c/fields/DirectShipStatus__c.field-meta.xml
<CustomField>
    <fullName>DirectShipStatus__c</fullName>
    <label>Direct Ship Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>