unpackaged/main/default/objects/Supplier__c/fields/DMLSApproved__c.field-meta.xml
<CustomField>
    <fullName>DMLSApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMLS Approved?</label>
    <type>Checkbox</type>
</CustomField>