unpackaged/main/default/objects/Supplier__c/fields/DMLSCount__c.field-meta.xml
<CustomField>
    <fullName>DMLSCount__c</fullName>
    <label>DMLS Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>