unpackaged/main/default/objects/Supplier__c/fields/EmployeeCount__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCount__c</fullName>
    <description>To determine ability for EZ-Pass</description>
    <inlineHelpText>From Request Test Part Form</inlineHelpText>
    <label>Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>