unpackaged/main/default/objects/Supplier__c/fields/EngagementRating__c.field-meta.xml
<CustomField>
    <fullName>EngagementRating__c</fullName>
    <label>Engagement Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>