unpackaged/main/default/objects/Supplier__c/fields/ERPContact__c.field-meta.xml
<CustomField>
    <fullName>ERPContact__c</fullName>
    <label>ERP Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>