unpackaged/main/default/objects/Supplier__c/fields/ERPLink__c.field-meta.xml
<CustomField>
    <fullName>ERPLink__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/partners/" +  PartnerID__c, "ERP Link")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Link</label>
    <type>Text</type>
</CustomField>