unpackaged/main/default/objects/Supplier__c/fields/ERPUserID__c.field-meta.xml
<CustomField>
    <fullName>ERPUserID__c</fullName>
    <label>ERP User ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>