unpackaged/main/default/objects/Supplier__c/fields/ExtrusionApproved__c.field-meta.xml
<CustomField>
    <fullName>ExtrusionApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extrusion Approved?</label>
    <type>Checkbox</type>
</CustomField>