unpackaged/main/default/objects/Supplier__c/fields/FabricationTubeSheet__c.field-meta.xml
<CustomField>
    <fullName>FabricationTubeSheet__c</fullName>
    <label>Fabrication (Tube/Sheet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>