unpackaged/main/default/objects/Supplier__c/fields/FacilityInUS__c.field-meta.xml
<CustomField>
    <fullName>FacilityInUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility In US</label>
    <type>Checkbox</type>
</CustomField>