unpackaged/main/default/objects/Supplier__c/fields/FDMApproved__c.field-meta.xml
<CustomField>
    <fullName>FDMApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FDM Approved?</label>
    <type>Checkbox</type>
</CustomField>