unpackaged/main/default/objects/Supplier__c/fields/FDMCount__c.field-meta.xml
<CustomField>
    <fullName>FDMCount__c</fullName>
    <label>FDM Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>