unpackaged/main/default/objects/Supplier__c/fields/FirstAdvanceCardTransaction__c.field-meta.xml
<CustomField>
    <fullName>FirstAdvanceCardTransaction__c</fullName>
    <label>First Advance Card Transaction</label>
    <type>Date</type>
</CustomField>