unpackaged/main/default/objects/Supplier__c/fields/FirstFastPay__c.field-meta.xml
<CustomField>
    <fullName>FirstFastPay__c</fullName>
    <label>First FastPay</label>
    <type>Date</type>
</CustomField>