unpackaged/main/default/objects/Supplier__c/fields/FirstInstantPay__c.field-meta.xml
<CustomField>
    <fullName>FirstInstantPay__c</fullName>
    <label>First InstantPay</label>
    <type>Date</type>
</CustomField>