unpackaged/main/default/objects/Supplier__c/fields/FirstJobAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>FirstJobAcceptedDate__c</fullName>
    <label>First Job Accepted Date</label>
    <type>Date</type>
</CustomField>