unpackaged/main/default/objects/Supplier__c/fields/FirstOfferedJobDate__c.field-meta.xml
<CustomField>
    <fullName>FirstOfferedJobDate__c</fullName>
    <label>First Offered Job Date</label>
    <type>Date</type>
</CustomField>