unpackaged/main/default/objects/Supplier__c/fields/GMPLink__c.field-meta.xml
<CustomField>
    <fullName>GMPLink__c</fullName>
    <label>GMP Link</label>
    <type>Url</type>
</CustomField>