unpackaged/main/default/objects/Supplier__c/fields/HolePopperEDMCount__c.field-meta.xml
<CustomField>
    <fullName>HolePopperEDMCount__c</fullName>
    <label>Hole Popper EDM Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>