unpackaged/main/default/objects/Supplier__c/fields/HPMultiJetApproved__c.field-meta.xml
<CustomField>
    <fullName>HPMultiJetApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP MultiJet Approved?</label>
    <type>Checkbox</type>
</CustomField>