unpackaged/main/default/objects/Supplier__c/fields/HPMultiJetCount__c.field-meta.xml
<CustomField>
    <fullName>HPMultiJetCount__c</fullName>
    <label>HP MultiJet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>