unpackaged/main/default/objects/Supplier__c/fields/IMScreenedQualified__c.field-meta.xml
<CustomField>
    <fullName>IMScreenedQualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IM Screened Qualified</label>
    <type>Checkbox</type>
</CustomField>