unpackaged/main/default/objects/Supplier__c/fields/InjectionMoldingApproved__c.field-meta.xml
<CustomField>
    <fullName>InjectionMoldingApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injection Molding Approved?</label>
    <type>Checkbox</type>
</CustomField>