unpackaged/main/default/objects/Supplier__c/fields/InjectionMoldingCapable__c.field-meta.xml
<CustomField>
    <fullName>InjectionMoldingCapable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injection Molding Capable?</label>
    <type>Checkbox</type>
</CustomField>