unpackaged/main/default/objects/Supplier__c/fields/InsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>InsuranceAmount__c</fullName>
    <label>Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>