unpackaged/main/default/objects/Supplier__c/fields/Interactions__c.field-meta.xml
<CustomField>
    <fullName>Interactions__c</fullName>
    <label>Interactions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>