unpackaged/main/default/objects/Supplier__c/fields/InterestedInMarketplace__c.field-meta.xml
<CustomField>
    <fullName>InterestedInMarketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Marketplace?</label>
    <type>Checkbox</type>
</CustomField>