unpackaged/main/default/objects/Supplier__c/fields/InternalWarningsRequests__c.field-meta.xml
<CustomField>
    <fullName>InternalWarningsRequests__c</fullName>
    <label>Internal Warnings &amp; Requests</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>