unpackaged/main/default/objects/Supplier__c/fields/IsGeneric__c.field-meta.xml
<CustomField>
    <fullName>IsGeneric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Generic</label>
    <type>Checkbox</type>
</CustomField>