unpackaged/main/default/objects/Supplier__c/fields/ISO13485Certified__c.field-meta.xml
<CustomField>
    <fullName>ISO13485Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO13485 Certified?</label>
    <type>Checkbox</type>
</CustomField>