unpackaged/main/default/objects/Supplier__c/fields/ISO13485Expiration__c.field-meta.xml
<CustomField>
    <fullName>ISO13485Expiration__c</fullName>
    <label>ISO13485 Expiration</label>
    <type>Date</type>
</CustomField>