unpackaged/main/default/objects/Supplier__c/fields/ISO9001Certified__c.field-meta.xml
<CustomField>
    <fullName>ISO9001Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO9001 Certified?</label>
    <type>Checkbox</type>
</CustomField>