unpackaged/main/default/objects/Supplier__c/fields/ISO9001ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ISO9001ExpirationDate__c</fullName>
    <label>ISO9001 Expiration Date</label>
    <type>Date</type>
</CustomField>