unpackaged/main/default/objects/Supplier__c/fields/ITARCertified__c.field-meta.xml
<CustomField>
    <fullName>ITARCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ITAR Certified?</label>
    <type>Checkbox</type>
</CustomField>