unpackaged/main/default/objects/Supplier__c/fields/ITARExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ITARExpirationDate__c</fullName>
    <label>ITAR Expiration Date</label>
    <type>Date</type>
</CustomField>