unpackaged/main/default/objects/Supplier__c/fields/JobOffersAccepted__c.field-meta.xml
<CustomField>
    <fullName>JobOffersAccepted__c</fullName>
    <label>Job Offers Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>