unpackaged/main/default/objects/Supplier__c/fields/JobOffersRead__c.field-meta.xml
<CustomField>
    <fullName>JobOffersRead__c</fullName>
    <label>Job Offers Read</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>