unpackaged/main/default/objects/Supplier__c/fields/JobRevenueLY__c.field-meta.xml
<CustomField>
    <fullName>JobRevenueLY__c</fullName>
    <label>Job Revenue Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>