unpackaged/main/default/objects/Supplier__c/fields/JobRevenueTY__c.field-meta.xml
<CustomField>
    <fullName>JobRevenueTY__c</fullName>
    <label>Job Revenue This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>