unpackaged/main/default/objects/Supplier__c/fields/JobsOffered__c.field-meta.xml
<CustomField>
    <fullName>JobsOffered__c</fullName>
    <label>Jobs Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>