unpackaged/main/default/objects/Supplier__c/fields/KaceyFix__c.field-meta.xml
<CustomField>
    <fullName>KaceyFix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kacey Fix 11/23</label>
    <type>Checkbox</type>
</CustomField>