unpackaged/main/default/objects/Supplier__c/fields/KeyAccounts__c.field-meta.xml
<CustomField>
    <fullName>KeyAccounts__c</fullName>
    <label>Key Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>