unpackaged/main/default/objects/Supplier__c/fields/LaserCutterCount__c.field-meta.xml
<CustomField>
    <fullName>LaserCutterCount__c</fullName>
    <label>Laser Cutter Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>