unpackaged/main/default/objects/Supplier__c/fields/LastAdvanceCardTransaction__c.field-meta.xml
<CustomField>
    <fullName>LastAdvanceCardTransaction__c</fullName>
    <label>Last Advance Card Transaction</label>
    <type>Date</type>
</CustomField>