unpackaged/main/default/objects/Supplier__c/fields/LastEscalationRecordUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastEscalationRecordUpdate__c</fullName>
    <label>Last Escalation Record Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>