unpackaged/main/default/objects/Supplier__c/fields/LastFastPay__c.field-meta.xml
<CustomField>
    <fullName>LastFastPay__c</fullName>
    <label>Last FastPay</label>
    <type>Date</type>
</CustomField>