unpackaged/main/default/objects/Supplier__c/fields/LastInstantPay__c.field-meta.xml
<CustomField>
    <fullName>LastInstantPay__c</fullName>
    <label>Last InstantPay</label>
    <type>Date</type>
</CustomField>