unpackaged/main/default/objects/Supplier__c/fields/LastInteraction__c.field-meta.xml
<CustomField>
    <fullName>LastInteraction__c</fullName>
    <label>Last Interaction</label>
    <type>Date</type>
</CustomField>