unpackaged/main/default/objects/Supplier__c/fields/LastJobAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>LastJobAcceptedDate__c</fullName>
    <label>Last Job Accepted Date</label>
    <type>Date</type>
</CustomField>