unpackaged/main/default/objects/Supplier__c/fields/LastOfferedJobDate__c.field-meta.xml
<CustomField>
    <fullName>LastOfferedJobDate__c</fullName>
    <label>Last Offered Job Date</label>
    <type>Date</type>
</CustomField>