unpackaged/main/default/objects/Supplier__c/fields/LastReadJobDate__c.field-meta.xml
<CustomField>
    <fullName>LastReadJobDate__c</fullName>
    <description>The date the supplier last looked at a job</description>
    <label>Last Read Job Date</label>
    <type>Date</type>
</CustomField>