unpackaged/main/default/objects/Supplier__c/fields/LastStepTaken__c.field-meta.xml
<CustomField>
    <fullName>LastStepTaken__c</fullName>
    <label>Last Step Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>