unpackaged/main/default/objects/Supplier__c/fields/LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastUpdate__c</fullName>
    <label>Last Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>