unpackaged/main/default/objects/Supplier__c/fields/LateJobExplanationLink__c.field-meta.xml
<CustomField>
    <fullName>LateJobExplanationLink__c</fullName>
    <label>Late Job Explanation Link</label>
    <type>Url</type>
</CustomField>