unpackaged/main/default/objects/Supplier__c/fields/LateJobs__c.field-meta.xml
<CustomField>
    <fullName>LateJobs__c</fullName>
    <description>Formerly NEW Late Jobs</description>
    <label>Late Jobs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>