unpackaged/main/default/objects/Supplier__c/fields/ListOfLateJobs__c.field-meta.xml
<CustomField>
    <fullName>ListOfLateJobs__c</fullName>
    <label>List of Late Jobs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>