unpackaged/main/default/objects/Supplier__c/fields/ListOfLateParts__c.field-meta.xml
<CustomField>
    <fullName>ListOfLateParts__c</fullName>
    <label>List of Late Parts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>