unpackaged/main/default/objects/Supplier__c/fields/MailingAddressCity__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressCity__c</fullName>
    <label>Mailing Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>