unpackaged/main/default/objects/Supplier__c/fields/MailingAddressState__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressState__c</fullName>
    <label>Mailing Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>