unpackaged/main/default/objects/Supplier__c/fields/MaterialsSent__c.field-meta.xml
<CustomField>
    <fullName>MaterialsSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Materials Sent</label>
    <type>Checkbox</type>
</CustomField>