unpackaged/main/default/objects/Supplier__c/fields/MinimumAcceptableValue__c.field-meta.xml
<CustomField>
    <fullName>MinimumAcceptableValue__c</fullName>
    <description>Dollar representation of Minimum Acceptable Value</description>
    <formula>MinimumAcceptableValueCents__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Acceptable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>