unpackaged/main/default/objects/Supplier__c/fields/MinimumAcceptableValueCents__c.field-meta.xml
<CustomField>
    <fullName>MinimumAcceptableValueCents__c</fullName>
    <description>Previously job_preferences_min_acceptable_value_in_cents</description>
    <label>Minimum Acceptable Value (Cents)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>