unpackaged/main/default/objects/Supplier__c/fields/MostRecentlyOpenedCase__c.field-meta.xml
<CustomField>
    <fullName>MostRecentlyOpenedCase__c</fullName>
    <label>Most Recently Opened Case</label>
    <type>Date</type>
</CustomField>