unpackaged/main/default/objects/Supplier__c/fields/MostRecentRecoveryDate__c.field-meta.xml
<CustomField>
    <fullName>MostRecentRecoveryDate__c</fullName>
    <label>Most Recent Recovery Date</label>
    <type>Date</type>
</CustomField>