unpackaged/main/default/objects/Supplier__c/fields/MostRecentResponse__c.field-meta.xml
<CustomField>
    <fullName>MostRecentResponse__c</fullName>
    <label>Most Recent Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>