unpackaged/main/default/objects/Supplier__c/fields/NDASigned__c.field-meta.xml
<CustomField>
    <fullName>NDASigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Signed</label>
    <type>Checkbox</type>
</CustomField>