unpackaged/main/default/objects/Supplier__c/fields/NeverPromoteWhy__c.field-meta.xml
<CustomField>
    <fullName>NeverPromoteWhy__c</fullName>
    <label>Never Promote &amp; Why</label>
    <length>255</length>
    <type>Text</type>
</CustomField>