unpackaged/main/default/objects/Supplier__c/fields/NextSteps__c.field-meta.xml
<CustomField>
    <fullName>NextSteps__c</fullName>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>