unpackaged/main/default/objects/Supplier__c/fields/NextStepsTimeRecord__c.field-meta.xml
<CustomField>
    <fullName>NextStepsTimeRecord__c</fullName>
    <label>Next Steps, Time Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>