unpackaged/main/default/objects/Supplier__c/fields/NotInterestedInPremiumPromotion__c.field-meta.xml
<CustomField>
    <fullName>NotInterestedInPremiumPromotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Interested in Premium Promotion?</label>
    <type>Checkbox</type>
</CustomField>