unpackaged/main/default/objects/Supplier__c/fields/Number_of_Currently_Late_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Currently_Late_Jobs__c</fullName>
    <label>Number of Currently Late Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>