unpackaged/main/default/objects/Supplier__c/fields/NumberOfEscalations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEscalations__c</fullName>
    <label>Number of Escalations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>