unpackaged/main/default/objects/Supplier__c/fields/NumberOfHighRisk__c.field-meta.xml
<CustomField>
    <fullName>NumberOfHighRisk__c</fullName>
    <label>Number of High Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>