unpackaged/main/default/objects/Supplier__c/fields/OnboardingAttempts__c.field-meta.xml
<CustomField>
    <fullName>OnboardingAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Onboarding Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>